configmap-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-test
  namespace: dev
  labels:
    app: configmap-test
spec:
  containers:
    - name: nginx
      image: nginx:1.27
