storage-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: storage-test
  namespace: dev
spec:
  containers:
    - name: busybox
      image: busybox:1.36

      command:
        - sh
        - -c
        - |
          echo "Storage test pod started"
          sleep 3600

      volumeMounts:
        - name: data
          mountPath: /data

  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: demo-pvc
